Fix scrollbar in cast component in next view page

--- a/client/src/pages/NextViewPage/NextViewPage.scss
+++ b/client/src/pages/NextViewPage/NextViewPage.scss
@@ -400,6 +400,10 @@
       max-width: 25.75rem;
     }
 
+    &.no-scroll .nextview-page__cast-scroll {
+      overflow: hidden;
+    }
+
     h3 {
       color: $primary-dark-blue;
       margin-bottom: 0.5rem;
